# active-workbench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  opencode.json  package-lock.json  package.json  pyproject.toml
backend/: DEPLOYMENT.md  README.md  __init__.py  pyproject.toml  test_local.sh  workbench.service
backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  telemetry.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: article_contracts.py  mobile_contracts.py  tool_contracts.py
backend/app/repositories/: __init__.py  article_repository.py  article_wallabag_repository.py  audit_repository.py  bucket_bookwyrm_quota_repository.py  bucket_musicbrainz_quota_repository.py  bucket_repository.py  bucket_tmdb_quota_repository.py  database.py  idempotency_repository.py  jobs_repository.py  memory_repository.py  mobile_api_key_repository.py  vault_repository.py  youtube_cache_repository.py  youtube_quota_repository.py
backend/app/scripts/: __init__.py  export_openapi.py  mobile_api_keys.py  youtube_oauth_setup.py  youtube_watch_later_push.py
backend/app/services/: __init__.py  article_pipeline_service.py  bucket_metadata_service.py  content_analysis.py  rate_limiter.py  scheduler_service.py  tool_dispatcher.py  wallabag_service.py  youtube_service.py
backend/app/services/incubator/: __init__.py  supadata_search.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: capture.py  k3s.py
backend/src/models/: __init__.py  capture.py  k3s.py
backend/src/services/: git_sync.py  k3s.py  vault_writer.py
cli/: README.md  pyproject.toml
cli/src/wb/: __init__.py  cli.py  config.py  vault.py
cli/src/wb/commands/: __init__.py  daybook.py  projects.py  utils.py  writing.py
docs/: DEPLOY_NGINX_VM.md  DEPLOY_TAILSCALE_VM.md  FUTURE_FEATURES.md  PHASE1_STATUS.md  PRODUCTION.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md  implementation_plan.md
openapi/: openapi.json
tests/: conftest.py  test_api.py  test_article_pipeline.py  test_bucket_bookwyrm_quota_repository.py  test_bucket_musicbrainz_quota_repository.py  (+11 more)
(+103 files in other folders)
